--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
 font-family: 'Frank Ruhl Libre', serif;
 font-family: 'Inconsolata', monospace;
             font-size: 22px;
+            width: 1080Spx;
             
         }
     </style>
