--- a/stats.html
+++ b/stats.html
@@ -65,7 +65,7 @@ Syllabus | Exam Date: 04/07/2020         </h6>
                     <div class="card-body">
                     <h6 class="lead">
 
-       <table class="table">
+       <table class="table table-bordered"> 
                         <thead class="thead-dark">
                        <tr>
                 <th scope="col">Unit No.</th>
