--- a/stats.html
+++ b/stats.html
@@ -78,7 +78,14 @@ Syllabus | Exam Date: 04/07/2020         </h6>
                            <th scope="row">4</th>
                
                <td>Probability Distributions and Estimations</td>
-               <td>1. Probability Concept.<hr>2. Probability Distributions<hr>3. Discrete and continuous Probability Distribution.
+               <td>1. Probability Concept.<hr>2. Probability Distributions<hr>3. Discrete and continuous Probability Distribution.<hr>4. Normal Distributions.<hr>5. Estimation Point and Interval Estimation.<hr> 6. Parameter Confidence Interval Estimation for Single Mean and Single Proportion(only)
+                               </td>
+                           </tr> 
+                           <tr>
+                           <th scope="row">5</th>
+               
+               <td>Statistical Inference</td>
+               <td>1. Null and Negative Hypotheses.<hr>2. Significance Level.<hr>3. Confidence Level.<hr>4. Type I and Type II errors.<hr>5. Critical Region.<hr> 6. Large and small sample Tests.<hr> 7. Z and T tests for mean and proportion.<hr>8. One way ANOVA.<hr>9. Chi-square test for goodness of fit and independence of attributes
                                </td>
                            </tr>
            </tbody>
