--- a/comm.html
+++ b/comm.html
@@ -15,7 +15,12 @@
        }
        
     </style> 
-   
+    <style>
+        button{
+            margin: 2px;
+        }
+    
+    </style>
     </head>
 <body>
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
