--- a/accounting.html
+++ b/accounting.html
@@ -10,7 +10,12 @@
    <style>
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
 </style>
-   
+    <style>
+        button{
+            margin: 2px;
+        }
+    
+    </style>
     </head>
 <body>
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
