--- a/behaviour.htm
+++ b/behaviour.htm
@@ -13,7 +13,12 @@
     
        }
     </style> 
-   
+    <style>
+        button{
+            margin: 2px;
+        }
+    
+    </style>
     </head>
 <body>
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
