--- a/stats.html
+++ b/stats.html
@@ -44,7 +44,7 @@
    <br>
     
   <div class="alert alert-danger" role="alert">
-    Last updated on May 1,2020 @ 10:00pm.
+    Last updated on June 13,2020
     </div>
     
     <div id="accordion">
