--- a/stats.html
+++ b/stats.html
@@ -1156,7 +1156,9 @@ Summary notes on Testing hypothesis, Pair T-test Example - May 8,2020 </a>
 summary notes on Testing Hypothesis, pair T-test example  </h6>
                     </div>
                     <div class="card-body">
-                    <h6 class="lead">Testing hypothesis, Pair t-test Example.<br> Unit 5- Statistical Hypothesis.<br>T-test
+                    <h6 class="lead">Unit 5- Statistical Hypothesis.<br>
+                        Confidence Interval- Difference Of Means
+                        <br>T-test
                         </h6>
                         <hr>
                         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#102">
@@ -1164,7 +1166,7 @@ summary notes on Testing Hypothesis, pair T-test example  </h6>
                         </button> <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#103">
                     Confidence Interval- Difference of means
                         </button> <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#104">
-                  Video 3
+                  T-test
                         </button> 
                         <div class="modal" id="102">
                         <div class="modal-dialog modal-lg">
