--- a/stats.html
+++ b/stats.html
@@ -1032,7 +1032,7 @@ CHI SQUARE TEST -MATERIAL  </h6>
                     </div>
                     <div class="card-body">
                     <h6 class="lead">1.Chi square Test- Question and Solution - Video 1 <br> 2.Chi square Test- Question and Solution - Video 2<br>
-                        3.Chi square Test- Question and Solution - Video 3<br> 4.Chi square- basics and Formulas.<br> 5.Practice question.<br> 6.Goodness of Fit test.
+                        3.Chi square Test- Question and Solution - Video 3<br> 4.Chi square- basics and Formulas- Video 4<br> 5.Practice question.<br> 6.Goodness of Fit test.
                         </h6>
                         <hr>
                         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#191">
