--- a/core.html
+++ b/core.html
@@ -577,5 +577,5 @@ REVISION CLASS 1  (STRANGE MEETING)               </h6>
     
     </div>
         
-    </div>
+    </div><br>
     </body></html>
