--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               <th scope="row">13/07/2020</th>  
               <td>9:30AM</td>
               <td>BBA234N</td>
-              <td>ADDITONAL ENGLISH</td>
+              <td>MARKETING MANAGEMENT</td>
          </tr>
           
           </tbody>
