--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </nav>
     <br>
     
-   <div class="container-fluid">
+   <div class="container">
        <div class="row">
     
     <div class="card">
