--- a/behaviour.htm
+++ b/behaviour.htm
@@ -104,7 +104,7 @@
                                 <tr>
                                 <th scope="row">Unit 9</th>
                                 <td>Conflict Management</td>
-                                <td>1. Meaning and Sources of Employee Grievance.<hr>2. Grievance Handling Systems.<hr>3. Meaning and process Of Conflict Bargaining.<hr>4. Indiscipline.<hr> 5. Settlement Machinery of Industrial Conflicts.</td>
+                                    <td>1. Meaning and Sources of Employee Grievance.<hr>2. Grievance Handling Systems.<hr>3. Meaning and process Of <STRONG>COLLECTIVE Bargaining.</STRONG><hr>4. Indiscipline.<hr> 5. Settlement Machinery of Industrial Conflicts.</td>
                                 </tr>
                                 
                                 
@@ -262,7 +262,7 @@ Recruitment                        </h6>
           <div class="card">
             <div class="card-header">
                 <a class="card-link" data-toggle="collapse" href="#1007">
-                MID SEM- Unit 6: Selection, Placement and Induction
+                MID SEM- Unit 5: Selection, Placement and Induction
                 </a>
                 </div>
                 <div id="1007" class="collapse" data-parent="#accordion">
@@ -704,7 +704,7 @@ Selection, Placement and Induction                        </h6>
     <div class="card">
             <div class="card-header">
         <a class="collapsed card-link" data-toggle="collapse" href="#final12">
-              Unit VIII, Conflict Management - Session 1, Apr 22,2020
+              Unit IX, Conflict Management - Session 1, Apr 22,2020
                 </a>
         </div>
         <div id="final12" class="collapse" data-parent="#accordion">
