--- a/behaviour.htm
+++ b/behaviour.htm
@@ -958,7 +958,7 @@ Unit IX- Conflict Management , May 7,2020             </a>
                             </button>
                             </div>
                             <div class="modal-body">
-                     <iframe src="https://drive.google.com/file/d/1_lSSf4fupg8nH3mdJGuORbB8VOwm1Ryl/preview" width="100%" height="480"></iframe>
+                     <iframe src="https://drive.google.com/file/d/1_lSSf4fupg8nH3mdJGuORbB8VOwm1Ryl/preview" width="100%" height="480" allowfullscreen></iframe>
                             </div>
                         </div>
                         </div>
