--- a/add.html
+++ b/add.html
@@ -39,7 +39,7 @@
         <li class="nav-item"><a class="nav-link" href="marketing.html">Marketing</a></li>
         <li class="nav-item"><a class="nav-link" href="stats.html">Statistics</a></li>
         <li class="nav-item"><a class="nav-link" href="behaviour.htm">HRM</a></li>
-        <li class="nav-item"><a class="nav-link" href="comm.html">Prof. Communication</a></li>
+        <li class="nav-item"><a class="nav-link" href="comm.html">Prof. Communication</a></li><li class="nav-item"><a class="nav-link" href="evs.html">Extra</a></li>
         </ul>
         </div>
     </nav><br>
